Add more test cases for add to current meld